Rebrand to Deep learning classification of fracture bones using ViT, overhaul LaTeX report (System Architecture, Performance Analysis), and fix header/layout overlaps

--- a/bone-fracture-web/public/manifest.json
+++ b/bone-fracture-web/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Fracture Detection ViT",
+  "name": "Deep learning classification of fracture bones using ViT",
   "icons": [
     {
       "src": "favicon.ico",
