--- a/render.yaml
+++ b/render.yaml
@@ -17,8 +17,20 @@ services:
     buildCommand: pip install -r requirements.txt && python manage.py migrate
     startCommand: gunicorn server.wsgi:application
     baseDir: backend
+    disk:
+      name: data
+      mountPath: /data
+      sizeGB: 1
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: server.settings
       - key: PYTHON_VERSION
         value: 3.10.0
+      - key: DJANGO_SECRET_KEY
+        generateValue: true
+      - key: DJANGO_DEBUG
+        value: "False"
+      - key: DJANGO_ALLOWED_HOSTS
+        value: bone-fracture-detects-api.onrender.com
+      - key: CORS_ALLOWED_ORIGINS
+        value: https://bone-fracture-detects-web.onrender.com
